KeePassDroid (0.2.0)

  * Improve file selection

KeePassDroid (0.1.4)

  * Add key file support

KeePassDroid (0.1.3)

  * Hide Meta-Info entries
  * Change "Copy URL" to "Go to URL"
  * Support "Go to Homepage"
  * Support Lock menu option
  * Fix blank password crash

KeePassDroid (0.1.2)

  * Fix crash when accessing the first root level group.

KeePassDroid (0.1.1)

  * Minor tweaks to layout.

KeePassdroid (0.0.1)

  * Initial Release