@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:versionCode="5" android:versionName="0.1.4">
+      android:versionCode="6" android:versionName="0.1.5">
     <application android:label="@string/app_name" android:icon="@drawable/keepass_icon">
         <activity android:name=".KeePass"
                   android:label="@string/app_name">
