@@ -1,48 +1,0 @@
-/*
- * Copyright 2009 Brian Pellin.
- *     
- * This file is part of KeePassDroid.
- *
- *  KeePassDroid is free software: you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- *  KeePassDroid is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
- *
- */
-package com.android.keepass;
-
-import android.content.Context;
-import android.util.TypedValue;
-import android.widget.LinearLayout;
-import android.widget.TextView;
-
-abstract public class PwItemView extends LinearLayout {
-	private TextView mTitle;
-	
-	PwItemView(Context context, String title) {
-		super(context);
-		
-		mTitle = new TextView(context);
-		mTitle.setText(title);
-		mTitle.setTextSize(TypedValue.COMPLEX_UNIT_SP, 30);
-		addView(mTitle, new LinearLayout.LayoutParams(LayoutParams.WRAP_CONTENT,LayoutParams.WRAP_CONTENT));
-	}
-	
-	protected void setTitle(String title) {
-		mTitle.setText(title);
-	}
-	
-	protected TextView getTextView() {
-		return mTitle;
-	}
-	
-	abstract void onClick();
-}
