@@ -1,6 +1,7 @@
-KeePassDroid (0.2.0)
+KeePassDroid (0.1.5)
 
   * Improve file selection
+  * UI enhancements
 
 KeePassDroid (0.1.4)
 
